--- a/starter-code/theme/css/app.css
+++ b/starter-code/theme/css/app.css
@@ -25,6 +25,16 @@ body {
   border-color: #19C0C6;
 }
 
+#popUp {
+  background: rgba(255,255,255,0.8);
+}
+
+#popUp > a {
+  background: #19C0C6;
+  padding: 20px;
+  color: #FFF;
+}
+
 .signing-form {
   max-width: 500px;
   margin: 0 auto;
@@ -73,6 +83,8 @@ body {
 .top-games-container {
   margin-top: 10px;
   height: 140px;
+  background: rgba(255,255,255,0.7);
+  height: 161px;
 }
 
 .top-games-image-container {
@@ -85,6 +97,8 @@ body {
   width: 125px;
   height: 125px;
   border-radius: 50%;
+  margin-left: 5px;
+  margin-top: 15px;
 }
 
 .top-games-content-container {
@@ -92,5 +106,51 @@ body {
 
 .top-games-content-container span {
   padding-left: 5px;
+  margin-top: 65px;
+  position: relative;
+  margin-left: 5px;
+  float: left;
 }
 /* Top games end */
+
+/* Comments */
+.comments-container {
+  margin-top: 10px;
+}
+
+.comments-title {
+  text-align: center;
+  background: #19C0C6;
+  padding: 10px;
+  widows: 250px;
+  color: #FFF;
+}
+
+.comments-image-container {
+  display: inline-block;
+  float: left;
+  overflow: hidden;
+}
+
+.comments-image-container img {
+  width: 250px;
+  height: 250px;
+}
+
+.comments-content-container {
+  width: 250px;
+  background: #FFF;
+  text-align: center;
+  padding: 10px;
+}
+/* Comments end */
+
+/* Footer */
+footer {
+  text-align: center;
+  background: #19C0C6;
+  padding: 20px;
+  color: #FFF;
+  margin-top: 20px;
+}
+/* Footer end */
