--- a/starter-code/theme/css/app.css
+++ b/starter-code/theme/css/app.css
@@ -20,6 +20,34 @@ body {
   padding-top: 5px;
 }
 
+.navbar-default .navbar-nav>li>a {
+  color: #FFF;
+}
+
+.navbar-default .navbar-nav>li>a:hover {
+  color: #FFF;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+  color: #FFF;
+  background-color: #000;
+}
+
+.dropdown-menu {
+  background: #000;
+  color: #FFF;
+}
+
+.dropdown-menu>li>a {
+  color: #FFF;
+  text-align: center;
+}
+
+.dropdown-menu > li > a:hover {
+  color: #19C0C6;
+  background: #000;
+}
+
 #signIn {
   background: #19C0C6;
   border-color: #19C0C6;
@@ -323,6 +351,46 @@ body {
 }
 /* Veiw end */
 
+/* New article */
+.new-article-container {
+    background: #FFF;
+}
+
+.new-article-form {
+    max-width: 500px;
+    margin: 0 auto;
+    background: #FFF;
+    padding: 10px 0;
+}
+
+.new-article-form input {
+    width: 400px;
+    height: 30px;
+    border: 1px solid #19C0C6;
+    margin-bottom: 5px;
+    padding: 5px;
+}
+
+input[type="file"] {
+    border: none;
+}
+
+.new-article-form textarea {
+    width: 400px;
+    height: 30px;
+    border: 1px solid #19C0C6;
+    margin-bottom: 5px;
+    padding: 5px;
+    height: 100px;
+}
+
+.new-article-form button {
+    background: #19C0C6;
+    border: 1px solid #19C0C6;
+    color: #FFF;
+}
+/* New article end */
+
 /* Footer */
 footer {
   text-align: center;
@@ -332,32 +400,3 @@ footer {
   margin-top: 20px;
 }
 /* Footer end */
-
-
-.navbar-default .navbar-nav>li>a {
-  color: #FFF;
-}
-
-.navbar-default .navbar-nav>li>a:hover {
-  color: #FFF;
-}
-
-.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-  color: #FFF;
-  background-color: #000;
-}
-
-.dropdown-menu {
-  background: #000;
-  color: #FFF;
-}
-
-.dropdown-menu>li>a {
-  color: #FFF;
-  text-align: center;
-}
-
-.dropdown-menu>li>a:hover {
-  color: #19C0C6;
-  background: #000;
-}
